[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/Actors/Enemies/Shared/LongBossDeath.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Effects/Materials/BossSmokeParticlesMedium.tres" type="Material" id=2]
[ext_resource path="res://src/Effects/Materials/BossExplosion.tres" type="Material" id=3]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/Idle.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/CrowrangIntro.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Bosses/BossStun.gd" type="Script" id=11]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=12]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=16]
[ext_resource path="res://src/Actors/Bosses/DarkMantis/mantis.res" type="SpriteFrames" id=17]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/BoomerangToss.gd" type="Script" id=18]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/DiveBomb.gd" type="Script" id=19]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/DaggerDash.gd" type="Script" id=20]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/WindGust.gd" type="Script" id=21]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/StormDive.gd" type="Script" id=22]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/BoomerangProjectile.tscn" type="PackedScene" id=23]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/DaggerProjectile.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/FeatherProjectile.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Actors/Bosses/WindCrowrang/WindZone.tscn" type="PackedScene" id=26]
[ext_resource path="res://src/Sounds/Mantis - Jump.wav" type="AudioStream" id=27]
[ext_resource path="res://src/Sounds/Mantis - Land.ogg" type="AudioStream" id=28]
[ext_resource path="res://src/Sounds/Mantis - Dash.ogg" type="AudioStream" id=29]
[ext_resource path="res://src/Sounds/Mantis - Cut1.ogg" type="AudioStream" id=30]
[ext_resource path="res://src/Sounds/Mantis - Desperation.ogg" type="AudioStream" id=31]
[ext_resource path="res://src/Sounds/Mantis - DarkArrow.ogg" type="AudioStream" id=32]
[ext_resource path="res://src/Sounds/Mantis - Dash2.ogg" type="AudioStream" id=33]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 28 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 18 )

[node name="WindCrowrang" type="KinematicBody2D" groups=["Bosses"]]
z_index = 4
collision_layer = 0
script = ExtResource( 6 )
max_health = 160.0

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 9 )
time_between_attacks = Vector2( 0.032, 0.85 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 12 )
z_index = 1
frames = ExtResource( 17 )
animation = "idle"
offset = Vector2( 0, 7 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 13 )
shape = SubResource( 2 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 10 )
actions = [ "Event" ]
animation = "fly_idle"

[node name="land" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 28 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"

[node name="swoop" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 33 )
volume_db = -4.0
max_distance = 600.0
bus = "SFX"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 5 )
conflicting_moves = [ "Anything" ]

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 7 )
invulnerability_time = 0.1
max_flash_time = 0.35
weakenesses = [ "SniperMissile" ]

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 16 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 4 )
damage = 6.0

[node name="BoomerangToss" type="Node2D" parent="."]
script = ExtResource( 18 )
actions = [ "Event" ]
animation = "prepare_throw"
boomerang_projectile = ExtResource( 23 )

[node name="throw_sfx" type="AudioStreamPlayer2D" parent="BoomerangToss"]
stream = ExtResource( 32 )
volume_db = -4.0
pitch_scale = 0.9
max_distance = 600.0
bus = "SFX"

[node name="DiveBomb" type="Node2D" parent="."]
script = ExtResource( 19 )
actions = [ "Event" ]
animation = "jump_prepare"
horizontal_velocity = 500.0
jump_velocity = 400.0

[node name="jump_sfx" type="AudioStreamPlayer2D" parent="DiveBomb"]
stream = ExtResource( 27 )
volume_db = -4.0
pitch_scale = 1.25
max_distance = 600.0
bus = "SFX"

[node name="dive_sfx" type="AudioStreamPlayer2D" parent="DiveBomb"]
stream = ExtResource( 33 )
volume_db = -4.0
max_distance = 600.0
bus = "SFX"

[node name="land_sfx" type="AudioStreamPlayer2D" parent="DiveBomb"]
stream = ExtResource( 28 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"

[node name="DaggerDash" type="Node2D" parent="."]
script = ExtResource( 20 )
actions = [ "Event" ]
animation = "dash_prepare"
horizontal_velocity = 450.0
dagger_projectile = ExtResource( 24 )

[node name="dash_sfx" type="AudioStreamPlayer2D" parent="DaggerDash"]
stream = ExtResource( 29 )
volume_db = -5.0
max_distance = 600.0
bus = "SFX"

[node name="slash_sfx" type="AudioStreamPlayer2D" parent="DaggerDash"]
stream = ExtResource( 30 )
volume_db = -4.0
pitch_scale = 1.3
max_distance = 600.0
bus = "SFX"

[node name="WindGust" type="Node2D" parent="."]
script = ExtResource( 21 )
actions = [ "Event" ]
animation = "prepare_throw"
feather_projectile = ExtResource( 25 )
wind_zone_scene = ExtResource( 26 )

[node name="gust_sfx" type="AudioStreamPlayer2D" parent="WindGust"]
stream = ExtResource( 29 )
volume_db = -3.0
pitch_scale = 0.7
max_distance = 600.0
bus = "SFX"

[node name="StormDive" type="Node2D" parent="."]
script = ExtResource( 22 )
actions = [ "Event" ]
animation = "desperation_prepare"
jump_velocity = 600.0
desperation_attack = true

[node name="dive_sfx" type="AudioStreamPlayer2D" parent="StormDive"]
stream = ExtResource( 33 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"

[node name="roar_sfx" type="AudioStreamPlayer2D" parent="StormDive"]
stream = ExtResource( 31 )
volume_db = 2.0
max_distance = 600.0
bus = "SFX"

[node name="land_sfx" type="AudioStreamPlayer2D" parent="StormDive"]
stream = ExtResource( 28 )
volume_db = -4.0
max_distance = 600.0
bus = "SFX"

[node name="BossDeath" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
death_animation = "death"
collectible = "crowrang_weapon"

[node name="Explosion Particles" parent="BossDeath" index="0"]
amount = 24
process_material = ExtResource( 3 )

[node name="Smoke Particles" parent="BossDeath" index="1"]
process_material = ExtResource( 2 )

[node name="BossStun" type="Node2D" parent="."]
script = ExtResource( 11 )
conflicting_moves = [ "BossDeath" ]
actions = [ "Event" ]
animation = "death"
horizontal_velocity = 120.0
jump_velocity = 150.0

[connection signal="ability_start" from="StormDive" to="BossStun" method="deactivate"]

[editable path="BossDeath"]
